# pypdfeditor

./: pyproject.toml
.github/workflows/: main.yml
pypdfeditor/: commands.py  editor.py  main.py  parser.py  read_args.py  type_definitions.py  validator.py
tests/: test_dummy.py  test_parse_page_range.py  test_read_args.py  test_split_pdf.py  test_validate_args.py
